# mahgym

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.MD  action_encodings.txt  actions.txt  basis.txt  data model.txt  data_structures.txt  encodings.py  encodings.txt  game.py  player.py  render.py  setup.py  simple.ipynb  test_render.py  testing.ipynb  tile_plot.py  tiles_visualisation.ipynb
core/: CMakeLists.txt  README.md
core/agents/: _agent.py  _template.py  agent.py  human.py  random.py
core/engine/: game.py  limit_hands.py  main.py  player.py  scoring.py  shorthand.py  table.py  utils.py
core/include/11wo4/: config.hpp  errors.hpp  player.hpp  state.hpp  tables.hpp  types.hpp  util.hpp
core/src/: player.cpp  state.cpp
core/src/engine/: actions.py  game.py  player.py  scoring.py  shorthand.py  utils.py
notebooks/: _1_testing.ipynb  testing_execution_times.ipynb  testing_game_table.ipynb
src/: game old.py  game.py  player.py  renderer.py  utils.py
src/mahgym/: game.py  renderer.py
src/mahgym.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
